samples/_failures_safe/1761327249_212063_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a30caae3.c: In function ‘main’:
./samples/SAFE/__tmp_a30caae3.c:165:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  165 |     TokenHandler handlers
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_a30caae3.c:165:5: error: expected declaration or statement at end of input
